# fastapi-notes-api

./: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  server.py
alembic/: env.py  file_test.py
alembic/versions/: a5637de14228_.py
api/: config.py  database.py
api/controllers/: notes.py
api/models/: __init__.py  notes.py
api/schemas/: __init__.py  notes.py
api/views/: __init__.py  notes.py
