[tool.poetry]
name = "fastapi-note-app"
version = "0.1.0"
description = ""
authors = ["Josh Stephens <bsdtux@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_note_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi-utils = "^0.2.1"
psycopg2 = "^2.9.5"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
python-dotenv = "^1.0.0"
alembic = "^1.10.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
